# bumc_instascraping

./: README.md  Twitter_User_Age.py  barackobama.html  barackobama_page.md  do_it.py  pyproject.toml  test.ts
bumc_instascraping/: __main__.py  nn.py  rate_limiter.py  scraping.py
data/: 2021_06_09_valid_users.csv
